--- a/Woox-Crypto-Cryptocurrency-HTML-Website-Template/index.html
+++ b/Woox-Crypto-Cryptocurrency-HTML-Website-Template/index.html
@@ -26,7 +26,7 @@
 
 <!-- Preloader -->
 
-<div id="hellopreloader">
+<!-- <div id="hellopreloader">
 	<div class="preloader">
 		<svg width="135" height="140" fill="#fff">
 			<rect width="15" height="120" y="10" rx="6">
@@ -53,13 +53,13 @@
 
 		<div class="text">Loading ...</div>
 	</div>
-</div>
+</div> -->
 
 <!-- ... end Preloader -->
 
 <!-- Header -->
 
-<header class="header" id="site-header">
+<!-- <header class="header" id="site-header">
 	<div class="container">
 		<div class="header-content-wrapper">
 			<a href="index-2.html" class="site-logo">
@@ -584,7 +584,7 @@
 
 		</div>
 	</div>
-</header>
+</header> -->
 
 <!-- ... end Header -->
 
